# Truth-Table-Generator

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  main.cpp  testfile.txt
src/: TruthTables.h
